Change java to 8, more in readme, small cleaning